--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
                 <button type="submit">Submit</button>
             </form>
         </div>
+        <!-- Countdown -->
+        <div class="countdown" id="countdown" hidden>
+            <h1 id="countdown-title">Countdown Title Here</h1>
+            <ul>
+                <li><span>3</span>Days</li>
+                <li><span>6</span>Hours</li>
+                <li><span>45</span>Minutes</li>
+                <li><span>52</span>Seconds</li>
+            </ul>
+            <button id="coundown-button">Reset</button>
+        </div>
+        <!-- Complete -->
+        <div class="complete" id="complete" hidden>
+            <h1 class="complete-title">Countdown Complete</h1>
+            <h1 id="complete-info">Countdown Finished on 04-05-2020</h1>
+            <button id="complete-button">New Countdown</button>
+        </div>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
