--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                 <li><span></span>Minutes</li>
                 <li><span></span>Seconds</li>
             </ul>
-            <button id="coundown-button">Reset</button>
+            <button id="countdown-button">Reset</button>
         </div>
         <!-- Complete -->
         <div class="complete" id="complete" hidden>
             <h1 class="complete-title">Countdown Complete</h1>
-            <h1 id="complete-info">Countdown Finished on 04-05-2020</h1>
+            <h1 id="complete-info"></h1>
             <button id="complete-button">New Countdown</button>
         </div>
     </div>
